sửa pom client, fxmlloadtest và yml